--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -14,6 +14,7 @@
 -   [ALIYUN::ApiGateway::CustomDomain](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md)：为API分组创建绑定自定义域名
 -   [ALIYUN::ApiGateway::Deployment](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)：发布API或快速切换API版
 -   [ALIYUN::ApiGateway::Group](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)：创建API分组
+-   [ALIYUN::ApiGateway::Instance](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Instance.md)：创建专享实例
 -   [ALIYUN::ApiGateway::Signature](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md)：创建后端签名密钥
 -   [ALIYUN::ApiGateway::SignatureBinding](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md)：绑定API与后端签名密钥
 -   [ALIYUN::ApiGateway::StageConfig](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md)：创建API分组中测试、预发、线上环境变量
@@ -23,7 +24,9 @@
 |应用实时监控服务ARMS（Application Real-Time Monitoring Service）|-   [ALIYUN::ARMS::AlertContact](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContact.md)：创建报警联系人
 -   [ALIYUN::ARMS::AlertContactGroup](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContactGroup.md)：创建报警联系人分组
 -   [ALIYUN::ARMS::RetcodeApp](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::RetcodeApp.md)：创建前端监控任务 |
+|阿里云服务网格ASM（Alibaba Cloud Service Mesh）|[ALIYUN::ASM::ServiceMesh](/intl.zh-CN/资源类型/ASM/ALIYUN::ASM::ServiceMesh.md)：创建服务网格实例|
 |阿里云交易和账单管理API（BSS）|[ALIYUN::BSS::WaitOrder](/intl.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md)：等待订单结束|
+|SSL证书（SSL Certificates）|[ALIYUN::CAS::Certificate](/intl.zh-CN/资源类型/CAS/ALIYUN::CAS::Certificate.md)：添加证书|
 |内容分发网络CDN（Content Delivery Network）|-   [ALIYUN::CDN::Domain](/intl.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md)：添加加速域名
 -   [ALIYUN::CDN::DomainConfig](/intl.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md)：域名批量配置 |
 |云企业网CEN（Cloud Enterprise Network）|-   [ALIYUN::CEN::CenInstance](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md)：创建云企业网实例
@@ -43,7 +46,11 @@
 -   [ALIYUN::CMS::MetricRuleTargets](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTargets.md)：添加或修改报警规则的目标
 -   [ALIYUN::CMS::MetricRuleTemplate](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTemplate.md)：创建报警模板
 -   [ALIYUN::CMS::MonitoringAgentProcess](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
--   [ALIYUN::CMS::MonitorGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组 |
+-   [ALIYUN::CMS::MonitorGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组
+-   [ALIYUN::CMS::SiteMonitor](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::SiteMonitor.md)：创建站点监控的监控任务 |
+|容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/intl.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
+-   [ALIYUN::CR::Namespace](/intl.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
+-   [ALIYUN::CR::Repository](/intl.zh-CN/资源类型/CR/ALIYUN::CR::Repository.md)：创建一个新的仓库 |
 |容器服务Kubernetes版ACK（Alibaba Cloud Container Service for Kubernetes）|-   [ALIYUN::CS::AnyCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::AnyCluster.md)：创建任意类型的Kubernetes集群实例
 -   [ALIYUN::CS::KubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::KubernetesCluster.md)：创建Kubernetes专有版集群
 -   [ALIYUN::CS::ManagedEdgeKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ManagedEdgeKubernetesCluster.md)：创建Kubernetes边缘托管版集群实例
@@ -57,6 +64,12 @@
 |云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
 -   [ALIYUN::DNS::DomainGroup](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md)：添加域名分组
 -   [ALIYUN::DNS::DomainRecord](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
+|云原生分布式数据库PolarDB-X|-   [ALIYUN::DRDS::DrdsDB](/intl.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsDB.md)：创建PolarDB-X云原生分布式数据库
+-   [ALIYUN::DRDS::DrdsInstance](/intl.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库 |
+|数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::SynchronizationJob]()：购买同步实例、配置同步作业
+-   [ALIYUN::DTS::MigrationJob]()：创建、配置数据迁移任务 |
+|弹性容器实例ECI（Elastic Container Instance）|-   [ALIYUN::ECI::ContainerGroup](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
+-   [ALIYUN::ECI::ImageCache](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ImageCache.md)：创建镜像缓存 |
 |云服务器ECS（Elastic Compute Service）|-   [ALIYUN::ECS::AutoProvisioningGroup](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoProvisioningGroup.md)：创建弹性供应组
 -   [ALIYUN::ECS::AutoSnapshotPolicy](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md)：自动快照策略
 -   [ALIYUN::ECS::AssignIpv6Addresses](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AssignIpv6Addresses.md)：为弹性网卡分配一个或多个IPv6地址
@@ -100,6 +113,7 @@
 -   [ALIYUN::EDAS::ClusterMember](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::ClusterMember.md)：向集群中添加ECS实例
 -   [ALIYUN::EDAS::DeployGroup](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::DeployGroup.md)：创建分组
 -   [ALIYUN::EDAS::UserDefineRegion](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::UserDefineRegion.md)：创建或编辑自定义命名空间 |
+|阿里云Elasticsearch|[ALIYUN::ElasticSearch::Instance](/intl.zh-CN/资源类型/ElasticSearch/ALIYUN::ElasticSearch::Instance.md)：创建ElasticSearch实例|
 |弹性高性能计算（E-HPC）|[ALIYUN::EHPC::Cluster](/intl.zh-CN/资源类型/EHPC/ALIYUN::EHPC::Cluster.md)：创建一个弹性高性能计算集群|
 |阿里云E-MapReduce（Elastic MapReduce）|[ALIYUN::EMR::Cluster](/intl.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md)：创建一个E-MapReduce集群|
 |边缘节点服务ENS（Edge Node Service）|[ALIYUN::ENS::Instance](/intl.zh-CN/资源类型/ENS/ALIYUN::ENS::Instance.md)：创建ENS实例|
@@ -133,10 +147,15 @@
 -   [ALIYUN::HBR::RestoreJob](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::RestoreJob.md)：创建恢复任务 |
 |物联网平台IoT（Internet of things）|-   [ALIYUN::IOT::Device](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
 -   [ALIYUN::IOT::DeviceGroup](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::DeviceGroup.md)：创建分组
--   [ALIYUN::IOT::Product](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品 |
-|消息队列Kafka版|[ALIYUN::KAFKA::Topic](/intl.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic|
-|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Key](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
--   [ALIYUN::KMS::Alias](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名 |
+-   [ALIYUN::IOT::Product](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品
+-   [ALIYUN::IOT::ProductTopic](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::ProductTopic.md)：为指定产品创建自定义Topic类
+-   [ALIYUN::IOT::Rule](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Rule.md)：为指定Topic新建一个规则
+-   [ALIYUN::IOT::RuleAction](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::RuleAction.md)：在指定的规则下创建一个规则动作 |
+|消息队列Kafka版|-   [ALIYUN::KAFKA::Instance](/intl.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Instance.md)：创建Kafka实例
+-   [ALIYUN::KAFKA::Topic](/intl.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic |
+|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Alias](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名
+-   [ALIYUN::KMS::Key](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
+-   [ALIYUN::KMS::Secret](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Secret.md)：创建凭据，并存入凭据的初始版本 |
 |云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
 |云数据库Memcache版\( ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance]()：创建Memcache实例
 -   [ALIYUN::Memcache::Whitelist]()：创建白名单 |
@@ -152,11 +171,13 @@
 -   [ALIYUN::NAS::FileSystem](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md)：创建新的文件系统
 -   [ALIYUN::NAS::MountTarget](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md)：创建挂载点 |
 |运维编排服务OOS（Operation Orchestration Service）|-   [ALIYUN::OOS::Execution](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Execution.md)：启动一个执行
--   [ALIYUN::OOS::Template](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版 |
+-   [ALIYUN::OOS::Template](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版
+-   [ALIYUN::OOS::Parameter](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Parameter.md)：创建一个普通参数 |
 |对象存储服务OSS（Object Storage Service）|[ALIYUN::OSS::Bucket](/intl.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)：创建OSS存储空间|
 |表格存储（Table Store）|-   [ALIYUN::OTS::Instance](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md)：创建表格存储实例
--   [ALIYUN::OTS::VpcBinder](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md)：将表格存储实例绑定VPC
--   [ALIYUN::OTS::Table](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表 |
+-   [ALIYUN::OTS::SearchIndex](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::SearchIndex.md)：在数据表上创建一个多元索引
+-   [ALIYUN::OTS::Table](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表
+-   [ALIYUN::OTS::VpcBinder](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md)：将表格存储实例绑定VPC |
 |云数据库PolarDB|-   [ALIYUN::POLARDB::Account](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::Account.md)：为POLARDB数据库创建账号
 -   [ALIYUN::POLARDB::AccountPrivilege](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::AccountPrivilege.md)：授权普通账号访问POLARDB集群的某个数据库
 -   [ALIYUN::POLARDB::DBCluster](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBCluster.md)：创建POLARDB集群
@@ -165,6 +186,8 @@
 -   [ALIYUN::POLARDB::DBClusterEndpointAddress](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpointAddress.md)：创建POLARDB集群的公网地址
 -   [ALIYUN::POLARDB::DBInstance](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
 -   [ALIYUN::POLARDB::DBNodes](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
+|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint]()：创建终端节点
+-   [ALIYUN::PrivateLink::VpcEndpointService]()：创建终端节点服务 |
 |云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
 -   [ALIYUN::PVTZ::ZoneRecord](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
 -   [ALIYUN::PVTZ::ZoneVpcBinder](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
@@ -174,6 +197,7 @@
 -   [ALIYUN::RAM::Group](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md)：创建RAM用户组
 -   [ALIYUN::RAM::ManagedPolicy](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md)：创建RAM权限策略
 -   [ALIYUN::RAM::Role](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md)：创建RAM用户
+-   [ALIYUN::RAM::SAMLProvider](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::SAMLProvider.md)：创建角色SSO身份提供商
 -   [ALIYUN::RAM::User](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md)：创建RAM子账号
 -   [ALIYUN::RAM::UserToGroupAddition](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md)：添加RAM用户到用户组 |
 |阿里云关系型数据库RDS（Relational Database Service）|-   [ALIYUN::RDS::Account](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
@@ -181,6 +205,7 @@
 -   [ALIYUN::RDS::ADInfo](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::ADInfo.md)：配置AD域服务
 -   [ALIYUN::RDS::Database](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Database.md)：在实例下创建数据库
 -   [ALIYUN::RDS::DBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)：创建数据库实例
+-   [ALIYUN::RDS::DBInstanceClone](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceClone.md)：将历史数据恢复至一个新实例（称为克隆实例）
 -   [ALIYUN::RDS::DBInstanceParameterGroup](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md)：修改数据库参数列表
 -   [ALIYUN::RDS::DBInstanceSecurityIps](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md)：修改实例访问白名单
 -   [ALIYUN::RDS::PrepayDBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md)：创建预付费数据库实例
@@ -230,11 +255,13 @@
 -   [ALIYUN::SLS::Project](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)：创建日志项目
 -   [ALIYUN::SLS::LogtailConfig](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数
 -   [ALIYUN::SLS::Savedsearch](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Savedsearch.md)：将查询结果保存为快速查询 |
+|时序数据库TSDB（Time Series Database）|[ALIYUN::TSDB::HiTSDBInstance](/intl.zh-CN/资源类型/TSDB/ALIYUN::TSDB::HiTSDBInstance.md)：创建时序数据库实例|
 |极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
 -   [ALIYUN::UIS::UisConnection](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
 -   [ALIYUN::UIS::UisNode](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
 |专有网络VPC（Virtual Private Cloud）|-   [ALIYUN::VPC::CommonBandwidthPackage](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)：创建共享带宽实例
 -   [ALIYUN::VPC::CommonBandwidthPackageIp](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackageIp.md)：添加EIP到共享带宽中
+-   [ALIYUN::VPC::CustomerGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CustomerGateway.md)：创建用户网关
 -   [ALIYUN::VPC::EIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)：申请弹性公网IP
 -   [ALIYUN::VPC::EIPAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md)：绑定弹性公网IP
 -   [ALIYUN::VPC::GrantInstanceToCen](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::GrantInstanceToCen.md)：为云企业网实例授权
@@ -246,7 +273,11 @@
 -   [ALIYUN::VPC::RouterInterface](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md)：创建路由器接口
 -   [ALIYUN::VPC::RouteTable](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouteTable.md)：创建自定义路由表
 -   [ALIYUN::VPC::RouteTableAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouteTableAssociation.md)：绑定自定义路由表和同一VPC内的交换机
--   [ALIYUN::VPC::SnatEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md)：在SNAT列表中添加SNAT条目 |
+-   [ALIYUN::VPC::SnatEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md)：在SNAT列表中添加SNAT条目
+-   [ALIYUN::VPC::SslVpnClientCert](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnClientCert.md)：创建SSL-VPN客户端证书
+-   [ALIYUN::VPC::SslVpnServer](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnServer.md)：创建SSL-VPN服务端
+-   [ALIYUN::VPC::VpnConnection](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnConnection.md)：创建IPsec连接
+-   [ALIYUN::VPC::VpnGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnGateway.md)：创建VPN网关 |
 |视频监控（Video Surveillance）|[ALIYUN::VS::Group](/intl.zh-CN/资源类型/VS/ALIYUN::VS::Group.md)：创建业务空间|
 |Web应用防火墙WAF（Web Application Firewall）|-   [ALIYUN::WAF::AclRule](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::AclRule.md)：为指定域名添加精准访问控制规则
 -   [ALIYUN::WAF::DomainConfig](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::DomainConfig.md)：添加域名配置信息
