--- a/cn.zh-CN/资源栈/创建资源栈.md
+++ b/cn.zh-CN/资源栈/创建资源栈.md
@@ -49,7 +49,7 @@
 
 8.  在检查并确认页面，单击**创建**。
 
-    资源栈创建成功后，**状态描述**列显示**创建成功**。
+    资源栈创建成功后，**状态**列显示**创建成功**。
 
 
 ## 使用现有资源创建资源栈
@@ -120,7 +120,7 @@
 
 6.  在识别资源页面，输入资源标识符值（例如：`eip-bp140qv3j25nsfaqd****`），单击**下一步**。
 
-    ![导入资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0839667061/p195814.png)
+    ![资源导入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9999590161/p225585.png)
 
 7.  在配置模板参数页面，配置**资源栈名称**和**更改集名称**，单击**下一步**。
 
