--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -47,6 +47,7 @@
 -   [ALIYUN::CMS::MetricRuleTemplate](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTemplate.md)：创建报警模板
 -   [ALIYUN::CMS::MonitoringAgentProcess](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
 -   [ALIYUN::CMS::MonitorGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组
+-   [ALIYUN::CMS::MonitorGroupInstances](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroupInstances.md)：添加资源到应用分组
 -   [ALIYUN::CMS::SiteMonitor](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::SiteMonitor.md)：创建站点监控的监控任务 |
 |容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/intl.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
 -   [ALIYUN::CR::Namespace](/intl.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
@@ -157,13 +158,14 @@
 -   [ALIYUN::KMS::Key](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
 -   [ALIYUN::KMS::Secret](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Secret.md)：创建凭据，并存入凭据的初始版本 |
 |云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
-|云数据库Memcache版\( ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance]()：创建Memcache实例
+|云数据库Memcache版（ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance]()：创建Memcache实例
 -   [ALIYUN::Memcache::Whitelist]()：创建白名单 |
 |微服务引擎MSE（Microservice Engine）|[ALIYUN::MSE::Cluster](/intl.zh-CN/资源类型/MSE/ALIYUN::MSE::Cluster.md)：创建集群|
 |消息服务MNS（Message Notification Service）|-   [ALIYUN::MNS::Queue](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md)：创建消息队列
 -   [ALIYUN::MNS::Subscription](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md)：描述订阅关系
 -   [ALIYUN::MNS::Topic](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md)：创建主题 |
 |云数据库MongoDB版（ApsaraDB for MongoDB）|-   [ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
+-   [ALIYUN::MONGODB::PrepayInstance]()：创建预付费云数据库MongoDB版实例
 -   [ALIYUN::MONGODB::ServerlessInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ServerlessInstance.md)：创建MongoDB Serverless版实例
 -   [ALIYUN::MONGODB::ShardingInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md)：创建或者克隆MongoDB分片集群实例 |
 |文件存储NAS（Network Attached Storage ）|-   [ALIYUN::NAS::AccessGroup](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
@@ -186,8 +188,8 @@
 -   [ALIYUN::POLARDB::DBClusterEndpointAddress](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpointAddress.md)：创建POLARDB集群的公网地址
 -   [ALIYUN::POLARDB::DBInstance](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
 -   [ALIYUN::POLARDB::DBNodes](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
-|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint]()：创建终端节点
--   [ALIYUN::PrivateLink::VpcEndpointService]()：创建终端节点服务 |
+|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpoint.md)：创建终端节点
+-   [ALIYUN::PrivateLink::VpcEndpointService](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpointService.md)：创建终端节点服务 |
 |云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
 -   [ALIYUN::PVTZ::ZoneRecord](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
 -   [ALIYUN::PVTZ::ZoneVpcBinder](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
