--- a/cn.zh-CN/资源类型/资源类型索引.md
+++ b/cn.zh-CN/资源类型/资源类型索引.md
@@ -47,6 +47,7 @@
 -   [ALIYUN::CMS::MetricRuleTemplate](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTemplate.md)：创建报警模板
 -   [ALIYUN::CMS::MonitoringAgentProcess](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
 -   [ALIYUN::CMS::MonitorGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组
+-   [ALIYUN::CMS::MonitorGroupInstances](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroupInstances.md)：添加资源到应用分组
 -   [ALIYUN::CMS::SiteMonitor](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::SiteMonitor.md)：创建站点监控的监控任务 |
 |容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/cn.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
 -   [ALIYUN::CR::Namespace](/cn.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
@@ -157,7 +158,7 @@
 -   [ALIYUN::KMS::Key](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
 -   [ALIYUN::KMS::Secret](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Secret.md)：创建凭据，并存入凭据的初始版本 |
 |云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
-|云数据库Memcache版\( ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Instance.md)：创建Memcache实例
+|云数据库Memcache版（ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Instance.md)：创建Memcache实例
 -   [ALIYUN::Memcache::Whitelist](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Whitelist.md)：创建白名单 |
 |微服务引擎MSE（Microservice Engine）|[ALIYUN::MSE::Cluster](/cn.zh-CN/资源类型/MSE/ALIYUN::MSE::Cluster.md)：创建集群|
 |消息服务MNS（Message Notification Service）|-   [ALIYUN::MNS::Queue](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md)：创建消息队列
@@ -186,8 +187,8 @@
 -   [ALIYUN::POLARDB::DBClusterEndpointAddress](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpointAddress.md)：创建POLARDB集群的公网地址
 -   [ALIYUN::POLARDB::DBInstance](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
 -   [ALIYUN::POLARDB::DBNodes](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
-|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint]()：创建终端节点
--   [ALIYUN::PrivateLink::VpcEndpointService]()：创建终端节点服务 |
+|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint](/cn.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpoint.md)：创建终端节点
+-   [ALIYUN::PrivateLink::VpcEndpointService](/cn.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpointService.md)：创建终端节点服务 |
 |云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
 -   [ALIYUN::PVTZ::ZoneRecord](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
 -   [ALIYUN::PVTZ::ZoneVpcBinder](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
