--- a/intl.zh-CN/ROS CDK/概览.md
+++ b/intl.zh-CN/ROS CDK/概览.md
@@ -10,13 +10,12 @@
 
 -   代码开源：已经在[GitHub](https://github.com/aliyun/Resource-Orchestration-Service-Cloud-Development-Kit)上开源，方便您快速获取工具代码并进行安装。
 -   支持多种编程语言：JavaScript、TypeScript、Java和Python。
--   支持多种云服务和资源：阿⾥云60种服务、276种资源。
 -   极简代码开发：定义基础数据结构和逻辑，帮助您使用少量代码实现复杂模板的资源编排效果。
 
 ## 使用示例
 
--   [TypeScript示例]()
--   [JavaScript示例]()
--   [Java示例]()
--   [Python示例]()
+-   [TypeScript示例](/intl.zh-CN/ROS CDK/使用示例/TypeScript示例.md)
+-   [JavaScript示例](/intl.zh-CN/ROS CDK/使用示例/JavaScript示例.md)
+-   [Java示例](/intl.zh-CN/ROS CDK/使用示例/Java示例.md)
+-   [Python示例](/intl.zh-CN/ROS CDK/使用示例/Python示例.md)
 
