--- a/intl.zh-CN/资源导入/获取待导入资源的标识符属性.md
+++ b/intl.zh-CN/资源导入/获取待导入资源的标识符属性.md
@@ -2,7 +2,7 @@
 
 资源导入时，需要提供资源标识符属性。本文以ALIYUN::VPC::EIP为例，为您介绍如何调用GetResourceTypeTemplate和GetTemplateSummary接口，获取待导入资源的标识符属性。
 
-1.  登录[OpenAPI Explorer](https://api.alibabacloud.com/#/?product=ROS)。
+1.  登录[OpenAPI开发者门户](https://next.api.aliyun.com/api/ROS/2019-09-10)。
 
 2.  调用[GetResourceTypeTemplate](/intl.zh-CN/API参考/资源相关接口/GetResourceTypeTemplate.md)接口查询ALIYUN::VPC::EIP的模板（TemplateBody）。
 
