--- a/cn.zh-CN/资源类型/资源类型索引.md
+++ b/cn.zh-CN/资源类型/资源类型索引.md
@@ -12,9 +12,10 @@
 -   [ALIYUN::ApiGateway::App](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md)：创建应用
 -   [ALIYUN::ApiGateway::Authorization](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md)：为API授权应用的访问权限
 -   [ALIYUN::ApiGateway::CustomDomain](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md)：为API分组创建绑定自定义域名
--   [ALIYUN::ApiGateway::Deployment](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)：发布API或快速切换API版
+-   [ALIYUN::ApiGateway::Deployment](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)：发布API或快速切换API版本
 -   [ALIYUN::ApiGateway::Group](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)：创建API分组
 -   [ALIYUN::ApiGateway::Instance](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Instance.md)：创建专享实例
+-   [ALIYUN::ApiGateway::LogConfig](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::LogConfig.md)：创建日志配置
 -   [ALIYUN::ApiGateway::Signature](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md)：创建后端签名密钥
 -   [ALIYUN::ApiGateway::SignatureBinding](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md)：绑定API与后端签名密钥
 -   [ALIYUN::ApiGateway::StageConfig](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md)：创建API分组中测试、预发、线上环境变量
@@ -67,7 +68,9 @@
 -   [ALIYUN::DNS::DomainRecord](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
 |云原生分布式数据库PolarDB-X|-   [ALIYUN::DRDS::DrdsDB](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsDB.md)：创建PolarDB-X云原生分布式数据库
 -   [ALIYUN::DRDS::DrdsInstance](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库 |
-|数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::SynchronizationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::SynchronizationJob.md)：购买同步实例、配置同步作业
+|数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::ConsumerGroup](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::ConsumerGroup.md)：为数据订阅实例创建消费组
+-   [ALIYUN::DTS::SubscriptionInstance](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::SubscriptionInstance.md)：创建订阅实例、配置订阅通道
+-   [ALIYUN::DTS::SynchronizationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::SynchronizationJob.md)：购买同步实例、配置同步作业
 -   [ALIYUN::DTS::MigrationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::MigrationJob.md)：创建、配置数据迁移任务 |
 |弹性容器实例ECI（Elastic Container Instance）|-   [ALIYUN::ECI::ContainerGroup](/cn.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
 -   [ALIYUN::ECI::ImageCache](/cn.zh-CN/资源类型/ECI/ALIYUN::ECI::ImageCache.md)：创建镜像缓存 |
@@ -138,7 +141,9 @@
 -   [ALIYUN::FNF::Schedule](/cn.zh-CN/资源类型/FNF/ALIYUN::FNF::Schedule.md)：创建一个定时调度 |
 |实时计算（Alibaba Cloud Realtime Compute）|-   [ALIYUN::FOAS::Cluster](/cn.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Cluster.md)：为独享模式订单创建集群
 -   [ALIYUN::FOAS::Project](/cn.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Project.md)：在集群中创建项目 |
-|全球加速GA（Global Accelerator）|-   [ALIYUN::GA::BandwidthPackageAcceleratorAddition](/cn.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackageAcceleratorAddition.md)：将带宽包与全球加速实例绑定
+|全球加速GA（Global Accelerator）|-   [ALIYUN::GA::Accelerator](/cn.zh-CN/资源类型/GA/ALIYUN::GA::Accelerator.md)：创建全球加速实例
+-   [ALIYUN::GA::BandwidthPackage](/cn.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackage.md)：创建带宽包
+-   [ALIYUN::GA::BandwidthPackageAcceleratorAddition](/cn.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackageAcceleratorAddition.md)：将带宽包与全球加速实例绑定
 -   [ALIYUN::GA::EndpointGroup](/cn.zh-CN/资源类型/GA/ALIYUN::GA::EndpointGroup.md)：创建终端节点组
 -   [ALIYUN::GA::IpSets](/cn.zh-CN/资源类型/GA/ALIYUN::GA::IpSets.md)：创建加速地域
 -   [ALIYUN::GA::Listener](/cn.zh-CN/资源类型/GA/ALIYUN::GA::Listener.md)：创建监听 |
@@ -260,7 +265,9 @@
 |极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
 -   [ALIYUN::UIS::UisConnection](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
 -   [ALIYUN::UIS::UisNode](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
-|专有网络VPC（Virtual Private Cloud）|-   [ALIYUN::VPC::CommonBandwidthPackage](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)：创建共享带宽实例
+|专有网络VPC（Virtual Private Cloud）|-   [ALIYUN::VPC::AnycastEIP](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::AnycastEIP.md)：创建任播弹性公网IP（Anycast EIP）实例
+-   [ALIYUN::VPC::AnycastEIPAssociation](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::AnycastEIPAssociation.md)：将任播弹性公网IP（Anycast EIP）绑定到指定地域的云资源实例上
+-   [ALIYUN::VPC::CommonBandwidthPackage](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)：创建共享带宽实例
 -   [ALIYUN::VPC::CommonBandwidthPackageIp](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackageIp.md)：添加EIP到共享带宽中
 -   [ALIYUN::VPC::CustomerGateway](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CustomerGateway.md)：创建用户网关
 -   [ALIYUN::VPC::EIP](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)：申请弹性公网IP
@@ -282,5 +289,6 @@
 |视频监控（Video Surveillance）|[ALIYUN::VS::Group](/cn.zh-CN/资源类型/VS/ALIYUN::VS::Group.md)：创建业务空间|
 |Web应用防火墙WAF（Web Application Firewall）|-   [ALIYUN::WAF::AclRule](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::AclRule.md)：为指定域名添加精准访问控制规则
 -   [ALIYUN::WAF::DomainConfig](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::DomainConfig.md)：添加域名配置信息
+-   [ALIYUN::WAF::Instance](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::Instance.md)：创建Web应用防火墙实例
 -   [ALIYUN::WAF::WafSwitch](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::WafSwitch.md)：打开或关闭Web攻击防护功能开关 |
 
