--- a/cn.zh-CN/模板/管理模板/我的模板/创建模板.md
+++ b/cn.zh-CN/模板/管理模板/我的模板/创建模板.md
@@ -2,7 +2,7 @@
 
 模板用于创建资源栈，是描述基础设施和架构的蓝图。本文为您介绍如何创建模板。
 
-1.  登录[资源编排控制台](http://ros.console.aliyun.com)[资源编排控制台](https://partners-intl.console.aliyun.com/#/ros)。
+1.  登录[资源编排控制台](http://ros.console.aliyun.com)。
 
 2.  在左侧导航栏，选择**模板**\>**我的模板**。
 
@@ -10,11 +10,15 @@
 
 4.  在弹出的创建模板对话框，填写**模板名称**和**模板描述**。
 
-5.  选择**模板录入方式**。
+5.  添加**标签**。
+
+    关于如何添加标签，请参见[创建标签](/cn.zh-CN/标签/通过标签管理模板/创建标签.md)。
+
+6.  选择**模板录入方式**。
 
     -   **使用url**：输入模板的下载地址，单击**获取JSON内容**，系统自动填入模板内容。
     -   **输入模板**：手动输入模板内容。
     -   **模板示例**：选择**模板示例**，系统自动填入模板内容。
-6.  单击**确定**。
+7.  单击**确定**。
 
 
