--- a/intl.zh-CN/模板/管理模板/我的模板/编辑模板.md
+++ b/intl.zh-CN/模板/管理模板/我的模板/编辑模板.md
@@ -2,19 +2,30 @@
 
 本文为您介绍如何编辑模板。
 
+**说明：**
+
+-   编辑模板后，模板版本加1。例如：版本由v1变为v2。
+-   模板最多支持设置100个版本。如果版本达到上限，模板编辑操作将失败，您需要重新创建模板。
+
+## 操作步骤
+
 1.  登录[资源编排控制台](http://ros.console.aliyun.com)。
 
 2.  在左侧导航栏，选择**模板**\>**我的模板**。
 
-3.  在我的模板页面找到待编辑的模板，单击右侧操作列的**编辑**。
+3.  在我的模板页面找到待编辑的模板，单击右侧**操作**列的**编辑**。
 
 4.  在弹出的修改模板对话框，填写修改后的**模板名称**、**模板描述**。
 
-5.  选择**模板录入方式**，根据需要修改模板内容。
+5.  单击标签右侧的**添加**或**编辑**，添加或编辑标签。
+
+6.  选择**模板录入方式**，根据需要修改模板内容。
 
     -   **使用url**：输入模板的下载地址，单击**获取JSON内容**，系统自动填入模板内容。
     -   **输入模板**：手动输入模板内容。
     -   **模板示例**：选择**模板示例**，系统自动填入模板内容。
-6.  单击**确定**。
+7.  单击**确定**。
+
+    编辑模板后，您可以在我的模板页面模板**最新版本**列，查看模板的当前版本。
 
 
