--- a/cn.zh-CN/模板/管理模板/我的模板/删除模板.md
+++ b/cn.zh-CN/模板/管理模板/我的模板/删除模板.md
@@ -2,11 +2,13 @@
 
 本文为您介绍如何删除模板。
 
-1.  登录[资源编排控制台](http://ros.console.aliyun.com)[资源编排控制台](https://partners-intl.console.aliyun.com/#/ros)。
+如果已经将模板共享给其他阿里云账号，需要取消共享后才能删除模板。具体操作，请参见[取消共享]()。
+
+1.  登录[资源编排控制台](http://ros.console.aliyun.com)。
 
 2.  在左侧导航栏，选择**模板**\>**我的模板**。
 
-3.  在我的模板页面找到待删除的模板，单击右侧操作列的**删除**。
+3.  在我的模板页面找到待删除的模板，单击右侧**操作**列的**删除**。
 
 4.  在弹出的删除对话框，单击**确定**。
 
