--- a/cn.zh-CN/资源导入/使用现有资源创建资源栈.md
+++ b/cn.zh-CN/资源导入/使用现有资源创建资源栈.md
@@ -6,9 +6,7 @@
 
 1.  获取EIP资源的标识符属性。
 
-    参考[获取待导入资源的标识符属性](/cn.zh-CN/资源导入/获取待导入资源的标识符属性.md)获取EIP资源的标识符属性，您在编辑模板的时候会使用该属性。
-
-    本示例中，获取到的EIP资源的标识符属性为AllocationId，即EIP的实例ID。
+    本示例中，获取到的EIP资源的标识符属性为AllocationId，即EIP的实例ID。具体操作，请参见[获取待导入资源的标识符属性](/cn.zh-CN/资源导入/获取待导入资源的标识符属性.md)。
 
 2.  获取EIP的实例ID。
 
@@ -25,7 +23,7 @@
 
 4.  在资源栈列表页面，单击**创建资源栈**，然后在下拉列表中选择**使用现有资源（资源导入）**。
 
-5.  在选择模板页面，将**模板录入方式**设置为**输入模板**，在**模板内容**区域输入如下JSON格式的模板，单击**下一步**。
+5.  在选择模板页面的**指定模板**区域，选择**选择已有模板**，设置**模板录入方式**为**输入模板**，并在**模板内容**区域输入如下JSON格式的模板，然后单击**下一步**。
 
     ```
     {
