--- a/intl.zh-CN/资源栈/创建资源栈.md
+++ b/intl.zh-CN/资源栈/创建资源栈.md
@@ -6,11 +6,11 @@
 
 -   标准：创建新资源。
 
-    当您使用模板创建资源栈时，默认创建新资源。具体操作，请参见[通过模板创建资源栈](/intl.zh-CN/模板/管理模板/通过模板创建资源栈.md)和[通过示例模板创建资源栈](/intl.zh-CN/快速入门/通过示例模板创建资源栈.md)。
+    当您使用模板创建资源栈时，默认创建新资源。具体操作，请参见[通过模板创建资源栈](/intl.zh-CN/模板/管理模板/我的模板/通过模板创建资源栈.md)和[通过示例模板创建资源栈](/intl.zh-CN/快速入门/通过示例模板创建资源栈.md)。
 
 -   资源导入：使用现有资源。
 
-    您可以将现有资源通过资源导入的方式，导入到ROS的资源栈中，统一进行资源管理和编排。具体操作，请参见[使用现有资源创建资源栈](/intl.zh-CN/资源导入/使用现有资源创建资源栈.md)
+    您可以将现有资源通过资源导入的方式，导入到ROS的资源栈中，统一进行资源管理和编排。具体操作，请参见[使用现有资源创建资源栈](/intl.zh-CN/资源导入/使用现有资源创建资源栈.md)。
 
 
 ## 使用新资源创建资源栈
@@ -27,7 +27,7 @@
 
 5.  在选择模板页面，根据需要选择模板，单击**下一步**。
 
-    模板为JSON或YAML格式的文本文件，使用UTF-8编码。有关模板的详情，请参见[模板结构说明](/intl.zh-CN/模板/模板语法/模板结构说明.md)。
+    您可以选择JSON、YAML或Terraform三种类型的模板。关于模板的更多信息，请参见[模板结构说明](/intl.zh-CN/模板/模板语法/模板结构说明.md)。
 
 6.  在配置模板参数页面，配置**资源栈名称**和**参数录入**，单击**下一步**。
 
@@ -37,7 +37,7 @@
     |---|--|
     |**资源栈策略**|    -   **无资源栈策略**：不设置资源栈策略。
     -   **输入资源栈策略**：上传文件或在文本框手动输入资源栈策略。
-关于资源栈策略详情，请参见[资源栈策略](/intl.zh-CN/资源栈/资源栈策略.md)。 |
+关于资源栈策略的更多信息，请参见[资源栈策略](/intl.zh-CN/资源栈/资源栈策略.md)。 |
     |**失败时回滚**|    -   **已启用**：创建资源栈失败时，启用回滚策略。
     -   **已禁用**：创建资源栈失败时，禁用回滚策略。 |
     |**超时设置**|如果所有资源的创建或更新没有在该时间内完成，系统将自动回滚到创建或更新之前的状态。|
@@ -60,9 +60,7 @@
 
 1.  获取EIP资源的标识符属性。
 
-    参考[获取待导入资源的标识符属性](/intl.zh-CN/资源导入/获取待导入资源的标识符属性.md)获取EIP资源的标识符属性，您在编辑模板的时候会使用该属性。
-
-    本示例中，获取到的EIP资源的标识符属性为AllocationId，即EIP的实例ID。
+    本示例中，获取到的EIP资源的标识符属性为AllocationId，即EIP的实例ID。具体操作，请参见[获取待导入资源的标识符属性](/intl.zh-CN/资源导入/获取待导入资源的标识符属性.md)。
 
 2.  获取EIP的实例ID。
 
@@ -81,7 +79,7 @@
 
 4.  在资源栈列表页面，单击**创建资源栈**，然后在下拉列表中选择**使用现有资源（资源导入）**。
 
-5.  在选择模板页面，将**模板录入方式**设置为**输入模板**，在**模板内容**区域输入如下JSON格式的模板，单击**下一步**。
+5.  在选择模板页面的**指定模板**区域，选择**选择已有模板**，设置**模板录入方式**为**输入模板**，并在**模板内容**区域输入如下JSON格式的模板，然后单击**下一步**。
 
     ```
     {
