--- a/intl.zh-CN/偏差检测/支持偏差检测和资源导入的资源类型.md
+++ b/intl.zh-CN/偏差检测/支持偏差检测和资源导入的资源类型.md
@@ -4,60 +4,60 @@
 
 |云服务|资源类型|
 |---|----|
-|云服务器ECS（Elastic Compute Service）|-   ALIYUN::ECS::VPC
--   ALIYUN::ECS::VSwitch
--   ALIYUN::ECS::NatGateway
--   ALIYUN::ECS::SecurityGroup
--   ALIYUN::ECS::Instance
--   ALIYUN::ECS::NetworkInterface
--   ALIYUN::ECS::NetworkInterfaceAttachment
--   ALIYUN::ECS::SecurityGroupIngress
--   ALIYUN::ECS::Disk
--   ALIYUN::ECS::DiskAttachment
--   ALIYUN::ECS::SecurityGroupEgress
--   ALIYUN::ECS::Snapshot |
-|弹性伸缩（Auto Scaling）|-   ALIYUN::ESS::ScalingRule
--   ALIYUN::ESS::ScalingConfiguration
--   ALIYUN::ESS::ScalingGroup
--   ALIYUN::ESS::ScalingGroupEnable |
-|访问控制RAM（Resource Access Management）|-   ALIYUN::RAM::Role
--   ALIYUN::RAM::AttachPolicyToRole
--   ALIYUN::RAM::ManagedPolicy |
-|负载均衡SLB（Server Load Balancer）|-   ALIYUN::SLB::Listener
--   ALIYUN::SLB::LoadBalancer
--   ALIYUN::SLB::VServerGroup
--   ALIYUN::SLB::BackendServerAttachment
--   ALIYUN::SLB::MasterSlaveServerGroup |
-|专有网络VPC（Virtual Private Cloud）|-   ALIYUN::VPC::EIP
--   ALIYUN::VPC::EIPAssociation
--   ALIYUN::VPC::CommonBandwidthPackageIp
--   ALIYUN::VPC::SnatEntry
--   ALIYUN::VPC::CommonBandwidthPackage
--   ALIYUN::VPC::NatGateway |
-|云解析DNS（Alibaba Cloud DNS）|ALIYUN::DNS::DomainRecord|
-|文件存储NAS（Network Attached Storage ）|ALIYUN::NAS::FileSystem|
-|云数据库Redis版（ApsaraDB for Redis）|-   ALIYUN::REDIS::Instance
--   ALIYUN::REDIS::Whitelist |
-|云数据库MongoDB版（ApsaraDB for MongoDB）|ALIYUN::MONGODB::Instance|
-|日志服务SLS（Log Service）|-   ALIYUN::SLS::Project
--   ALIYUN::SLS::Logstore
--   ALIYUN::SLS::Index
--   ALIYUN::SLS::Alert
--   ALIYUN::SLS::SavedSearch |
-|函数计算FC（Function Compute）|-   ALIYUN::FC::Function
--   ALIYUN::FC::Service
--   ALIYUN::FC::Trigger
--   ALIYUN::FC::Version
--   ALIYUN::FC::CustomDomain
--   ALIYUN::FC::Alias |
-|API网关（API Gateway）|-   ALIYUN::ApiGateway::Deployment
--   ALIYUN::ApiGateway::Api
--   ALIYUN::ApiGateway::Group
--   ALIYUN::ApiGateway::Authorization
--   ALIYUN::ApiGateway::App |
-|表格存储（OTS）|-   ALIYUN::OTS::Instance
--   ALIYUN::OTS::Table
--   ALIYUN::OTS::VpcBinder |
-|对象存储（OSS）|ALIYUN::OSS::Bucket|
-|云数据库RDS版（RDS）|ALIYUN::RDS::DBInstance|
+|云服务器ECS|-   [ALIYUN::ECS::VPC](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md)
+-   [ALIYUN::ECS::VSwitch](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md)
+-   [ALIYUN::ECS::NatGateway]()
+-   [ALIYUN::ECS::SecurityGroup](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroup.md)
+-   [ALIYUN::ECS::Instance](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md)
+-   [ALIYUN::ECS::NetworkInterface](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterface.md)
+-   [ALIYUN::ECS::NetworkInterfaceAttachment](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfaceAttachment.md)
+-   [ALIYUN::ECS::SecurityGroupIngress](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupIngress.md)
+-   [ALIYUN::ECS::Disk](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Disk.md)
+-   [ALIYUN::ECS::DiskAttachment](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::DiskAttachment.md)
+-   [ALIYUN::ECS::SecurityGroupEgress](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupEgress.md)
+-   [ALIYUN::ECS::Snapshot](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Snapshot.md) |
+|弹性伸缩|-   [ALIYUN::ESS::ScalingRule](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md)
+-   [ALIYUN::ESS::ScalingConfiguration](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingConfiguration.md)
+-   [ALIYUN::ESS::ScalingGroup](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroup.md)
+-   [ALIYUN::ESS::ScalingGroupEnable](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md) |
+|访问控制RAM|-   [ALIYUN::RAM::Role](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md)
+-   [ALIYUN::RAM::AttachPolicyToRole](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md)
+-   [ALIYUN::RAM::ManagedPolicy](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md) |
+|负载均衡SLB|-   [ALIYUN::SLB::Listener](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Listener.md)
+-   [ALIYUN::SLB::LoadBalancer](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md)
+-   [ALIYUN::SLB::VServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md)
+-   [ALIYUN::SLB::BackendServerAttachment](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md)
+-   [ALIYUN::SLB::MasterSlaveServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md) |
+|专有网络VPC|-   [ALIYUN::VPC::EIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)
+-   [ALIYUN::VPC::EIPAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md)
+-   [ALIYUN::VPC::CommonBandwidthPackageIp](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackageIp.md)
+-   [ALIYUN::VPC::SnatEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md)
+-   [ALIYUN::VPC::CommonBandwidthPackage](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)
+-   [ALIYUN::VPC::NatGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NatGateway.md) |
+|云解析DNS|[ALIYUN::DNS::DomainRecord](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)|
+|文件存储NAS|[ALIYUN::NAS::FileSystem](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md)|
+|云数据库Redis版|-   [ALIYUN::REDIS::Instance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md)
+-   [ALIYUN::REDIS::Whitelist](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Whitelist.md) |
+|云数据库MongoDB版|[ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)|
+|日志服务SLS|-   [ALIYUN::SLS::Project](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)
+-   [ALIYUN::SLS::Logstore](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Logstore.md)
+-   [ALIYUN::SLS::Index](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Index.md)
+-   [ALIYUN::SLS::Alert](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Alert.md)
+-   [ALIYUN::SLS::Savedsearch](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Savedsearch.md) |
+|函数计算FC|-   [ALIYUN::FC::Function](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Function.md)
+-   [ALIYUN::FC::Service](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Service.md)
+-   [ALIYUN::FC::Trigger](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md)
+-   [ALIYUN::FC::Version](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Version.md)
+-   [ALIYUN::FC::CustomDomain](/intl.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md)
+-   [ALIYUN::FC::Alias](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Alias.md) |
+|API网关|-   [ALIYUN::ApiGateway::Deployment](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)
+-   [ALIYUN::ApiGateway::Api](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Api.md)
+-   [ALIYUN::ApiGateway::Group](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)
+-   [ALIYUN::ApiGateway::Authorization](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md)
+-   [ALIYUN::ApiGateway::App](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md) |
+|表格存储|-   [ALIYUN::OTS::Instance](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md)
+-   [ALIYUN::OTS::Table](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)
+-   [ALIYUN::OTS::VpcBinder](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md) |
+|对象存储OSS|[ALIYUN::OSS::Bucket](/intl.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)|
+|阿里云关系型数据库RDS|[ALIYUN::RDS::DBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)|
 
