--- a/cn.zh-CN/产品简介/什么是资源编排服务.md
+++ b/cn.zh-CN/产品简介/什么是资源编排服务.md
@@ -1,34 +1,19 @@
 # 什么是资源编排服务
 
-资源编排服务ROS（Resource Orchestration Service）是阿里云提供的一项简化云计算资源管理的服务。您可以遵循ROS定义的模板规范编写资源栈模板，在模板中定义所需的云计算资源（例如ECS实例、RDS数据库实例）、资源间的依赖关系等。ROS的编排引擎将根据模板自动完成所有资源的创建和配置，实现自动化部署及运维。
-
-![资源编排](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6393459951/p76489.png)
-
-资源编排产品介绍视频如下：
+资源编排服务ROS（Resource Orchestration Service）是阿里云提供的一项简化云计算资源管理的服务。您可以遵循ROS定义的模板规范编写资源栈模板，在模板中定义所需的云计算资源（例如：ECS实例、RDS数据库实例）、资源间的依赖关系等。ROS的编排引擎将根据模板自动完成所有资源的创建和配置，实现自动化部署及运维。
 
 
 
-## 免费服务托管
+资源编排的实现原理如下图所示：
 
-ROS提供全托管的自动化执行，即无服务器（Serverless）的自动化执行。您无需购买维护IaC模板本身执行所使用的资源，只需要关注您的业务所需要使用的资源，即模板中定义的资源。尤其当您需要创建多个项目（对应多个资源栈）时，全托管的自动化可以帮助您更快地完成任务。建议您使用Git或SVN等源代码版本管理软件同步管理模板，再通过ROS OpenAPI进行资源栈的维护。
+![资源编排](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6393459951/p76489.png)
 
-## 多账号跨地域部署
+资源编排的功能特性如下：
 
-您可以使用同一个ROS模板，在多个阿里云账号中跨地域的进行自动化部署。您也可以使用同一个ROS模板，部署开发、测试和生产环境，通过指定不同的参数满足各环境的差异性。例如：测试环境的ECS实例数是2台，而生产环境的ECS实例数是20台。
-
-## 标准化部署
-
-在实践中，不同环境的细微差异往往带来非常复杂的管理成本，延长了问题诊断的时间，从而影响了业务的正常运转。通过使用ROS重复部署，可以将部署环境标准化，减少不同环境的差异，将环境的配置沉淀到模板中。再通过类似代码的严格管理流程，从而保证部署的标准性。
-
-## 结果可视化呈现
-
-ROS通过自动化部署， 帮助您通过控制台或API清晰的查看部署结果， 避免人工逐个检查部署进程。
-
-## 偏差检测
-
-您可以使用偏差检测来识别在ROS之外的资源变更，并采取纠正措施，使资源再次与模板定义同步。
-
-## 服务集成
-
-通过集成访问控制（RAM）提供统一的身份认证，您无需单独建立用户认证体系。通过集成操作审计服务（ActionTrail）审查所有的运维操作，包括ROS本身。
+-   免费服务托管：ROS提供全托管的自动化执行，即无服务器（Serverless）的自动化执行。您可以在模板中定义阿里云资源和配置参数，并说明资源间的依赖关系，然后创建资源栈，从而管理一组资源。
+-   多账号跨地域部署：您可以使用同一个ROS模板，在多个阿里云账号中跨地域的进行自动化部署。您也可以使用同一个ROS模板，部署开发、测试和生产环境，通过指定不同的参数满足各环境的差异性。例如：测试环境的ECS实例数是2台，而生产环境的ECS实例数是20台。
+-   标准化部署：通过使用ROS重复部署，将部署环境标准化，减少不同环境的差异，将环境的配置沉淀到模板中，节省部署成本。
+-   结果可视化呈现：ROS通过自动化部署，帮助您通过控制台或API清晰的查看部署结果， 避免人工逐个检查部署进程。
+-   偏差检测：您可以使用偏差检测来识别在ROS之外的资源变更，并采取纠正措施，使资源再次与模板定义同步。
+-   服务集成：通过集成访问控制（RAM）提供统一的身份认证，您无需单独建立用户认证体系。通过集成操作审计服务（ActionTrail）审查所有的运维操作，包括ROS本身。
 
