--- a/cn.zh-CN/资源导入/将现有资源导入资源栈.md
+++ b/cn.zh-CN/资源导入/将现有资源导入资源栈.md
@@ -21,7 +21,7 @@
 
 3.  在页面左上角的地域下拉列表，选择资源栈的所在地域。
 
-    **说明：** 请确保待导入资源（EIP2）与资源栈处于同一地域。
+    **说明：** 请确保待导入资源与资源栈处于同一地域。
 
 4.  在资源栈列表页面，在资源栈右侧**操作**列，选择**![1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9333649951/p77718.png)** \> **导入资源**。
 
