--- a/intl.zh-CN/模板/预估资源价格.md
+++ b/intl.zh-CN/模板/预估资源价格.md
@@ -11,38 +11,37 @@
 
 ## 支持询价的资源类型
 
+**说明：** 资源付费方式与您在模板中设置的付费类型参数有关。例如：如果您将ALIYUN::ECS::Instance的付费类型（InstanceChargeType）设置为PrePaid，则创建的ECS实例付费方式为预付费。
+
 |云服务|资源类型|
 |---|----|
-|云企业网CEN|ALIYUN::CEN::CenBandwidthPackage|
-|云原生分布式数据库PolarDB-X|ALIYUN::DRDS::DrdsInstance|
-|弹性容器实例ECI|ALIYUN::ECI::ContainerGroup|
-|云服务器ECS|-   ALIYUN::ECS::DedicatedHost
--   ALIYUN::ECS::Disk
--   ALIYUN::ECS::ImageMarket
--   ALIYUN::ECS::Instance
--   ALIYUN::ECS::PrepayInstance |
-|弹性高性能计算|ALIYUN::EHPC::Cluster|
-|阿里云Elasticsearch|ALIYUN::ElasticSearch::Instance|
-|阿里云E-MapReduce|ALIYUN::EMR::Cluster|
-|云市场|ALIYUN::MarketPlace::Order|
-|云数据库Memcache版|ALIYUN::Memcache::Instance|
-|云数据库MongoDB版|-   ALIYUN::MONGODB::Instance
--   ALIYUN::MONGODB::PrepayInstance
--   ALIYUN::MONGODB::ServerlessInstance
--   ALIYUN::MONGODB::ShardingInstance |
-|云数据库PolarDB|ALIYUN::PolarDB::DBCluster|
-|云数据库Redis版|ALIYUN::REDIS::Instance|
-|阿里云关系型数据库RDS|-   ALIYUN::RDS::DBInstance
--   ALIYUN::RDS::PrepayDBInstance
--   ALIYUN::RDS::ReadOnlyDBInstance |
-|资源编排服务ROS|-   ALIYUN::ROS::ResourcePackage
--   ALIYUN::ROS::Stack |
-|Serverless应用引擎SAE|ALIYUN::SAE::Application|
-|负载均衡SLB|ALIYUN::SLB::LoadBalancer|
-|专有网络VPC|-   ALIYUN::VPC::CommonBandwidthPackage
--   ALIYUN::VPC::CustomerGateway
--   ALIYUN::VPC::EIP
--   ALIYUN::VPC::NatGateway
--   ALIYUN::VPC::Ipv6Gateway
--   ALIYUN::VPC::VpnGateway |
+|云企业网CEN|[ALIYUN::CEN::CenBandwidthPackage](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md)|
+|云原生分布式数据库PolarDB-X|[ALIYUN::DRDS::DrdsInstance](/intl.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)|
+|弹性容器实例ECI|[ALIYUN::ECI::ContainerGroup](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)|
+|云服务器ECS|-   [ALIYUN::ECS::DedicatedHost](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::DedicatedHost.md)
+-   [ALIYUN::ECS::Disk](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Disk.md)
+-   [ALIYUN::ECS::Instance](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md)
+-   [ALIYUN::ECS::PrepayInstance](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstance.md) |
+|弹性高性能计算|[ALIYUN::EHPC::Cluster](/intl.zh-CN/资源类型/EHPC/ALIYUN::EHPC::Cluster.md)|
+|阿里云Elasticsearch|[ALIYUN::ElasticSearch::Instance](/intl.zh-CN/资源类型/ElasticSearch/ALIYUN::ElasticSearch::Instance.md)|
+|阿里云E-MapReduce|[ALIYUN::EMR::Cluster](/intl.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md)|
+|云市场|[ALIYUN::MarketPlace::Order](/intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)|
+|云数据库Memcache版|[ALIYUN::Memcache::Instance]()|
+|云数据库MongoDB版|-   [ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)
+-   [ALIYUN::MONGODB::ServerlessInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ServerlessInstance.md)
+-   [ALIYUN::MONGODB::ShardingInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md) |
+|云数据库PolarDB|[ALIYUN::POLARDB::DBCluster](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBCluster.md)|
+|云数据库Redis版|[ALIYUN::REDIS::Instance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md)|
+|阿里云关系型数据库RDS|-   [ALIYUN::RDS::DBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)
+-   [ALIYUN::RDS::PrepayDBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md)
+-   [ALIYUN::RDS::ReadOnlyDBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::ReadOnlyDBInstance.md) |
+|资源编排服务ROS|[ALIYUN::ROS::Stack](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md)|
+|Serverless应用引擎SAE|[ALIYUN::SAE::Application](/intl.zh-CN/资源类型/SAE/ALIYUN::SAE::Application.md)|
+|负载均衡SLB|[ALIYUN::SLB::LoadBalancer](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md)|
+|专有网络VPC|-   [ALIYUN::VPC::CommonBandwidthPackage](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)
+-   [ALIYUN::VPC::CustomerGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CustomerGateway.md)
+-   [ALIYUN::VPC::EIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)
+-   [ALIYUN::VPC::NatGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NatGateway.md)
+-   [ALIYUN::VPC::Ipv6Gateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6Gateway.md)
+-   [ALIYUN::VPC::VpnGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnGateway.md) |
 
